feat: configure Slack webhook for AlertManager notifications
- Replace Telegram with Slack in AlertManager receivers
- Add SECURE_SLACK_WEBHOOK_URL integration
- Enhanced alert formatting with action buttons
- Professional AlertManager-Monitoring branding

--- a/observability/observability-full-stack/.env.example
+++ b/observability/observability-full-stack/.env.example
@@ -42,3 +42,7 @@ ACME_EMAIL=your-email@domain.com
 #  echo your_password | htpasswd -s -n -i username
 WEB_AUTH_USER=your_username
 WEB_AUTH_PASS="{SHA}your_hashed_password"
+
+# Slack Notification Configuration
+SLACK_WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+SLACK_CHANNEL=#alerts
