--- a/observability/observability-full-stack/.env.example
+++ b/observability/observability-full-stack/.env.example
@@ -1,13 +1,9 @@
-# Server Name
+# Server Configuration - From GitLab Variables
 HOSTNAME=${HOSTNAME:-observability}
+RESTART_POLICY=${RESTART_POLICY:-unless-stopped}
 
-# set restart policy
-RESTART_POLICY=${RESTART_POLICY:-on-failure}
-
-# VM IP Address - Set in GitLab CI/CD Variables
+# Network Configuration - From GitLab Variables  
 VM_IP=${VM_IP:-192.168.80.25}
-
-# Domain address - Set in GitLab CI/CD Variables  
 DOMAIN_ADDRESS=${DOMAIN_ADDRESS:-monlog.erahyar.com}
 PROMETHEUS_SUB=${PROMETHEUS_SUB:-metrics}
 GRAFANA_SUB=${GRAFANA_SUB:-grafana}
@@ -29,19 +25,19 @@ TEMPO_SUB=${TEMPO_SUB:-2.7.2}
 K6_TARCING_TAG=${K6_TARCING_TAG:-v0.0.8}
 MEMCACHED_TAG=${MEMCACHED_TAG:-1.6.38}
 
-# Grafana Auth - Set in GitLab CI/CD Variables (Masked)
+# Grafana Authentication - From GitLab Variables (SECURE_*)
 GRAFANA_USERNAME=${GRAFANA_USERNAME:-admin}
 GRAFANA_PASSWORD=${GRAFANA_PASSWORD:-secure_password_here}
 GRAFANA_INSTALL_PLUGINS=${GRAFANA_INSTALL_PLUGINS:-grafana-clock-panel,grafana-simple-json-datasource,grafana-piechart-panel}
 
-# ACME variables - Set in GitLab CI/CD Variables
+# SSL Configuration - From GitLab Variables (SECURE_ACME_EMAIL)
 ACME_EMAIL=${ACME_EMAIL:-admin@erahyar.com}
 
-# Web auth information - Set in GitLab CI/CD Variables (Masked)
+# Web Authentication - From GitLab Variables (WEB_AUTH_*)
 # Generate password hash: echo your_password | htpasswd -s -n -i admin
 WEB_AUTH_USER=${WEB_AUTH_USER:-admin}
 WEB_AUTH_PASS=${WEB_AUTH_PASS:-{SHA}hashed_password_here}
 
-# Slack Notification Configuration - Set in GitLab CI/CD Variables (Masked)
+# Slack Notifications - From GitLab Variables (SECURE_SLACK_WEBHOOK_URL)
 SLACK_WEBHOOK_URL=${SLACK_WEBHOOK_URL:-https://hooks.slack.com/services/YOUR/WEBHOOK/URL}
 SLACK_CHANNEL=${SLACK_CHANNEL:-#alerts}
