--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,20 +22,24 @@ variables:
 default:
   image: alpine:latest
   before_script:
-    - apk add --no-cache openssh-client
+    - apk add --no-cache openssh-client netcat-openbsd
 
 deploy:production:
   stage: deploy
   script:
     - echo "🚀 Simple deployment to production server..."
+    - echo "🔍 Debug - PRODUCTION_VM_IP = ${PRODUCTION_VM_IP}"
     - 'command -v ssh-agent >/dev/null || ( apk add --no-cache openssh-client )'
     - eval $(ssh-agent -s)
     - echo "$SSH_PRIVATE_KEY_RUNNER" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - ssh-keyscan -H $PRODUCTION_VM_IP >> ~/.ssh/known_hosts
+    - echo "🔍 Testing SSH connectivity to ${PRODUCTION_VM_IP}:8090..."
+    - timeout 10 nc -z $PRODUCTION_VM_IP 8090 || echo "❌ SSH port 8090 not reachable"
+    - echo "🔍 Adding SSH host key for port 8090..."
+    - ssh-keyscan -p 8090 -H $PRODUCTION_VM_IP >> ~/.ssh/known_hosts || echo "StrictHostKeyChecking no" >> ~/.ssh/config
     - |
-      ssh root@$PRODUCTION_VM_IP << 'EOF'
+      ssh -p 8090 root@$PRODUCTION_VM_IP << 'EOF'
         echo "📁 Going to monitoring directory..."
         cd /opt/monitoring/observability/observability-full-stack
         
