--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -88,7 +88,7 @@ deploy:production:
           curl -L "https://github.com/docker/compose/releases/latest/download/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
           chmod +x /usr/local/bin/docker-compose
         fi
-        
+        cd observability/observability-full-stack
         echo "🐳 Restarting containers..."
         docker-compose down
         docker-compose pull
