--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,21 +57,17 @@ deploy:production:
 
         echo '📁 Going to observability stack directory...' &&
         cd observability/observability-full-stack &&
-        echo '⚙️ Installing required packages...' &&
-        if ! command -v envsubst > /dev/null; then apt-get update && apt-get install -y gettext-base; fi &&
-        echo '🔧 Updating environment variables from GitLab...' &&
-        export VM_IP=\"\$PRODUCTION_VM_IP\" &&
-        export DOMAIN_ADDRESS=\"\$PRODUCTION_DOMAIN\" &&
-        export HOSTNAME=\"\$PRODUCTION_HOST\" &&
-        export GRAFANA_USERNAME=\"\$SECURE_GRAFANA_USERNAME\" &&
-        export GRAFANA_PASSWORD=\"\$SECURE_GRAFANA_PASSWORD\" &&
-        export ACME_EMAIL=\"\$SECURE_ACME_EMAIL\" &&
-        export WEB_AUTH_USER=\"\$WEB_AUTH_USER\" &&
-        export WEB_AUTH_PASS=\"\$WEB_AUTH_PASS\" &&
-        export SLACK_WEBHOOK_URL=\"\$SECURE_SLACK_WEBHOOK_URL\" &&
-        
-        echo '📝 Generating environment file...' &&
-        envsubst < .env.example > .env &&
+        echo '📝 Generating environment file with sed...' &&
+        cp .env.example .env &&
+        sed -i \"s/\\\${VM_IP}/\$PRODUCTION_VM_IP/g\" .env &&
+        sed -i \"s/\\\${DOMAIN_ADDRESS}/\$PRODUCTION_DOMAIN/g\" .env &&
+        sed -i \"s/\\\${HOSTNAME}/\$PRODUCTION_HOST/g\" .env &&
+        sed -i \"s/\\\${GRAFANA_USERNAME}/\$SECURE_GRAFANA_USERNAME/g\" .env &&
+        sed -i \"s/\\\${GRAFANA_PASSWORD}/\$SECURE_GRAFANA_PASSWORD/g\" .env &&
+        sed -i \"s/\\\${ACME_EMAIL}/\$SECURE_ACME_EMAIL/g\" .env &&
+        sed -i \"s/\\\${WEB_AUTH_USER}/\$WEB_AUTH_USER/g\" .env &&
+        sed -i \"s/\\\${WEB_AUTH_PASS}/\$WEB_AUTH_PASS/g\" .env &&
+        sed -i \"s/\\\${SLACK_WEBHOOK_URL}/\$SECURE_SLACK_WEBHOOK_URL/g\" .env &&
         echo '🐳 Restarting monitoring stack...' &&
         docker-compose down &&
         docker-compose pull &&
